# GLReander

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: rectangle.shader
src/: main.cpp
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
